[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "franklinwh"
version = "0.0.2"
authors = [
{ name="Richo Butts", email="richo@psych0tik.net" },
]
description = "Python wrapper for FranklinWH"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
]

[project.urls]
Homepage = "https://github.com/richo/franklinwh-python"
Issues = "https://github.com/richo/franklinwh-python/issues"
