[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "franklinwh"
version = "1.0.0"
authors = [
{ name="Richo Butts", email="richo@psych0tik.net" },
]
description = "Python wrapper for FranklinWH"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
]
dependencies = [
  "httpx[http2]>=0.28.1"
]

[project.optional-dependencies]
bin = [
  "jsonpickle"
]
build = [
  "build",
  "twine",
]
test = [
  "pytest"
]

[project.urls]
Homepage = "https://github.com/richo/franklinwh-python"
Issues = "https://github.com/richo/franklinwh-python/issues"

[tool.hatch.build]
exclude = [
  "/env",
  ".*",
]

[tool.ruff]
line-length = 120
